# KaedeBot

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20240822130522_init.sql
src/: main.rs
src/commands/: mod.rs  setup.rs  talk.rs
src/utils/: database.rs
