[package]
name = "KaedeBot"
version = "0.1.0"
authors = ["Norphiil"]
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "0.15.0" }
sqlx = { version = "0.8.0", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
lazy_static = { version = "1.5.0" }